--- a/chatbot_function_calling.ipynb
+++ b/chatbot_function_calling.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,7 @@
     }
    ],
    "source": [
-    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "openai_api_key"
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
