--- a/chatbot_function_calling.ipynb
+++ b/chatbot_function_calling.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
-    "import gradio as gr\n",
     "import gradio as gr\n",
     "import json\n",
     "import os"
@@ -16,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +24,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/03/11 15:03:58 [W] [service.go:132] login to server failed: dial tcp 44.237.78.176:7000: i/o timeout\n"
+      "2025/03/17 12:50:15 [W] [service.go:132] login to server failed: dial tcp 44.237.78.176:7000: i/o timeout\n"
      ]
     },
     {
@@ -301,11 +300,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tool call info:  ChatCompletionMessageToolCall(id='call_gMROH6IImXINB8uy4wDDu3PO', function=Function(arguments='{\"task_name\":\"ES-356\"}', name='fetch_gitlab_pipelines'), type='function')\n",
-      "Task name:  ES-356\n",
+      "tool call info:  ChatCompletionMessageToolCall(id='call_EY17XPbwcjl3eWXgpsxnWoFW', function=Function(arguments='{\"task_name\":\"10156526529\"}', name='fetch_gitlab_pipelines'), type='function')\n",
+      "Task name:  10156526529\n",
       "Project ID:  508\n",
-      "Found 1 matching pipelines\n",
-      "messages:  [{'role': 'user', 'metadata': None, 'content': 'Hello', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': 'Hello! How can I assist you today?', 'options': None}, {'role': 'user', 'content': 'fetch gitlab pipeline ES-356'}, ChatCompletionMessage(content=None, refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_gMROH6IImXINB8uy4wDDu3PO', function=Function(arguments='{\"task_name\":\"ES-356\"}', name='fetch_gitlab_pipelines'), type='function')]), {'role': 'tool', 'tool_call_id': 'call_gMROH6IImXINB8uy4wDDu3PO', 'content': 'Found 1 matching pipelines:\\n\\nPipeline ID: 272859\\nStatus: success\\nEnvironment: production\\nCreated at: 2025-03-11T10:16:12.660+03:00\\nUpdated at: 2025-03-11T10:17:21.033+03:00\\nName: [production] - ES-356\\nWeb URL: https://devops.housing.sa:8083/ejar3/devs/ejar3-run-script-tool/-/pipelines/272859\\n==================================================\\n'}]\n"
+      "Error searching pipelines: 401: invalid_token\n",
+      "messages:  [{'role': 'user', 'metadata': None, 'content': 'fetch pipeline 10156526529', 'options': None}, {'role': 'assistant', 'metadata': None, 'content': \"It seems like you're trying to fetch details for a specific pipeline using an ID. However, the available tool functions focus on searching for GitLab pipelines based on various filters such as task name, status, environment, and date ranges, rather than fetching by a specific ID.\\n\\nIf you have additional search criteria or need information about a specific task, please provide more details.\", 'options': None}, {'role': 'user', 'content': 'fetch pipeline using task name 10156526529'}, ChatCompletionMessage(content=None, refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_EY17XPbwcjl3eWXgpsxnWoFW', function=Function(arguments='{\"task_name\":\"10156526529\"}', name='fetch_gitlab_pipelines'), type='function')], annotations=[]), {'role': 'tool', 'tool_call_id': 'call_EY17XPbwcjl3eWXgpsxnWoFW', 'content': 'Error searching pipelines: 401: invalid_token'}]\n"
      ]
     }
    ],
